_docs/v0.60/embedding/sdk/api/snippets/CreateDashboardModalProps.md
---
version: v0.60
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: CreateDashboardModalProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/CreateDashboardModalProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                | Type                                                                       | Description                                                                                                        |
| :------------------------------------------------------ | :------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------- |
| <a id="initialcollectionid"></a> `initialCollectionId?` | [`SdkCollectionId`](./api/SdkCollectionId)                              | Initial collection in which to create a dashboard. You can use predefined system values like `root` or `personal`. |
| <a id="isopen"></a> `isOpen?`                           | `boolean`                                                                  | Whether the modal is open or not.                                                                                  |
| <a id="onclose"></a> `onClose?`                         | () => `void`                                                               | Handler to close modal component                                                                                   |
| <a id="oncreate"></a> `onCreate`                        | (`dashboard`: [`MetabaseDashboard`](./api/MetabaseDashboard)) => `void` | Handler to react on dashboard creation.                                                                            |
| <a id="targetcollection"></a> `targetCollection?`       | [`SdkCollectionId`](./api/SdkCollectionId)                              | The collection to save the dashboard to. This will hide the collection picker from the save modal.                 |

<!-- [<endsnippet properties>] -->
